2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘snprintf’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘snprintf’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Remove obsolete handling for broken ‘printf %.2d’.

	* configure.ac (rcs_cv_dot2_ok): Delete AC_CACHE_CHECK.
	(PRINTF_DOT2_OK): Delete AC_DEFINE_UNQUOTED.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove ‘rcs_cv_dot2_ok’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘sprintf-posix’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘sprintf-posix’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘opendir’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘opendir’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘fstat’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘fstat’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘closedir’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘closedir’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib for large file support.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘largefile’.
	* configure.ac (AC_SYS_LARGEFILE): Delete macro call.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Make extract-help fail noisily.

	* build-aux/extract-help: Add ‘set -e’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use program-specific variable name for extracted help.

	* build-aux/extract-help: If an input file is specified,
	use its stem to construct a C variable name "STEM_help".

2011-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	co: Add option ‘-S’ to enable "self-same" mode.

	* doc/rcs.texi (co): Add entry for ‘-S’ in table of options.

2011-09-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Make sure all macro calls use {}.

	Apparently, in PDF output, unlike Info output, the macro
	expansion abuts the following text unless there is {}.

	* rcs.texi: Throughout, say ‘@repo{}’, not ‘@repo’.
