@@ -1,5 +1,11 @@
 2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build int] Use gnulib to implement ‘exiting’ func attribute.
+
+	* base.h (exiting): Use ‘_Noreturn’ directly.
+
+2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build int] Decruft: Remove obsolete handling for broken ‘printf %.2d’.
 
 	* rcstime.c (proper_dot_2): Delete macro.
